--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "nextrap-cli",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "A CLI to bootrap next.js apps with essential packages",
   "main": "index.js",
+  "exports": "./index.js",
+  "bin": "./index.js",
   "scripts": {
     "dev": "tsc --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,8 +14,20 @@
   "dependencies": {
     "@types/inquirer": "^9.0.7",
     "chalk": "^5.3.0",
+    "execa": "^8.0.1",
     "inquirer": "^9.2.12",
     "nanospinner": "^1.1.0"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "prettier": "^3.1.1",
+    "prettier-plugin-prisma": "^5.0.0",
+    "prettier-plugin-tailwindcss": "^0.5.9",
+    "prisma": "^5.7.1",
+    "tailwindcss": "^3.4.0",
+    "ts-node": "^10.9.2"
+  }
 }
