--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nextrap-cli",
-  "version": "0.0.28",
+  "version": "0.0.33",
   "description": "A CLI to bootrap next.js apps with essential packages",
   "main": "index.js",
   "exports": "./index.js",
@@ -15,29 +15,14 @@
     "@faker-js/faker": "^8.3.1",
     "@inquirer/prompts": "^3.3.0",
     "@inquirer/select": "^1.3.1",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-slot": "^1.0.2",
     "chalk": "^5.3.0",
     "execa": "^8.0.1",
     "figlet": "^1.7.0",
     "inquirer": "^9.2.12",
-    "lucide-react": "^0.301.0",
     "nanospinner": "^1.1.0"
   },
   "type": "module",
-  "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
-    "@types/figlet": "^1.5.8",
-    "@types/inquirer": "^9.0.7",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "prettier": "^3.1.1",
-    "prettier-plugin-prisma": "^5.0.0",
-    "prettier-plugin-tailwindcss": "^0.5.9",
-    "prisma": "^5.7.1",
-    "tailwindcss": "^3.4.0",
-    "ts-node": "^10.9.2"
-  },
+  "devDependencies": {},
   "engines": {
     "node": ">=18.13.0"
   }
