--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "composite": true,
     "target": "es2022",
     "module": "es2022",
     "moduleResolution": "Bundler",
@@ -15,7 +14,8 @@
     "rootDir": "./src",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "incremental": false,
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist", "templates"]
