--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.56",
   "description": "A CLI to bootrap next.js apps with essential packages",
   "bin": "./dist/index.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "dev": "tsc && (concurrently \"tsc -w\" \"tsc-alias -w\")",
     "build": "rm -rf dist && tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
