--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "devDependencies": {
     "@types/figlet": "^1.5.8",
     "concurrently": "^8.2.2",
-    "tsc-alias": "^1.8.8"
+    "tsc-alias": "^1.8.8",
+    "@changesets/cli": "^2.27.1"
   },
   "engines": {
     "node": ">=18.13.0"
