--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
   },
   "type": "module",
   "devDependencies": {
+    "@changesets/cli": "^2.27.1",
     "@types/figlet": "^1.5.8",
     "concurrently": "^8.2.2",
     "tsc-alias": "^1.8.8",
-    "@changesets/cli": "^2.27.1"
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1"
   },
   "engines": {
     "node": ">=18.13.0"
