Fix package installation and add new dependencies

--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
   "type": "module",
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@types/figlet": "^1.5.8",
     "concurrently": "^8.2.2",
-    "tsc-alias": "^1.8.8",
-    "@ianvs/prettier-plugin-sort-imports": "^4.1.1"
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.9",
+    "tsc-alias": "^1.8.8"
   },
   "engines": {
     "node": ">=18.13.0"
